--- a/package.json
+++ b/package.json
@@ -9,14 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.5.1",
+    "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
+  },
+  "description": "Medical Company",
+  "main": "tailwind.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HassanR01/valeursegy.git"
+  },
+  "author": "Hassan Khaled",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HassanR01/valeursegy/issues"
+  },
+  "homepage": "https://github.com/HassanR01/valeursegy#readme"
 }
