--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
+    "framer-motion": "^11.3.8",
     "gsap": "^3.12.5",
     "mongoose": "^8.5.1",
     "next": "14.2.4",
