--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.3.8",
     "gsap": "^3.12.5",
+    "html-react-parser": "^5.1.12",
+    "jodit-react": "^4.1.2",
     "mongoose": "^8.4.1",
     "next": "14.2.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.166.1"
