--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "three": "^0.166.1"
   },
   "devDependencies": {
