--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "gsap": "^3.12.5",
     "html-react-parser": "^5.1.12",
     "jodit-react": "^4.1.2",
+    "leaflet": "^1.9.4",
     "mongoose": "^8.4.1",
     "next": "14.2.4",
     "nodemailer": "^6.9.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9",
